Timeline: fix panels overflow

--- a/src/theme/react-split-pane.css
+++ b/src/theme/react-split-pane.css
@@ -50,7 +50,7 @@
   border-color: transparent;
 }
 
-.Pane.vertical.Pane2 {
-  overflow-y: auto;
-  word-wrap: break-word;
+.Pane.vertical {
+  overflow: auto;
+  word-break: break-word;
 }
