--- a/src/theme/react-treeview.css
+++ b/src/theme/react-treeview.css
@@ -2,7 +2,7 @@
 
 /* the tree node's style */
 .tree-view {
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
 }
 
 .tree-view_item {
